# simpleRayTracer

./: CMakeLists.txt  Material.h  Model.cpp  Model.h  README.md  geometry.h  main.cpp  stb_image.h
